--- a/src/main/resources/emall.properties
+++ b/src/main/resources/emall.properties
@@ -2,3 +2,5 @@ ftp.server.ip=172.20.10.2
 ftp.user=admin
 ftp.pass=admin
 ftp.server.http.prefix=http://img.emall.com/
+
+password.salt=harrysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
