--- a/src/main/resources/emall.properties
+++ b/src/main/resources/emall.properties
@@ -1,6 +1,6 @@
-ftp.server.ip=172.20.10.2
-ftp.user=admin
-ftp.pass=admin
-ftp.server.http.prefix=http://img.emall.com/
+ftp.server.ip=127.0.0.1
+ftp.user=mmallftp
+ftp.pass=ftppassword
+ftp.server.http.prefix=http://img.happymmall.com/
 
 password.salt=harrysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
