--- a/src/main/resources/emall.properties
+++ b/src/main/resources/emall.properties
@@ -1,6 +1,6 @@
 ftp.server.ip=127.0.0.1
 ftp.user=mmallftp
 ftp.pass=ftppassword
-ftp.server.http.prefix=http://img.happymmall.com/
+ftp.server.http.prefix=ftp://127.0.0.1/img/
 
 password.salt=harrysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
