--- a/src/main/resources/emall.properties
+++ b/src/main/resources/emall.properties
@@ -3,4 +3,4 @@ ftp.user=mmallftp
 ftp.pass=ftppassword
 ftp.server.http.prefix=ftp://127.0.0.1/img/
 
-password.salt=harrysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
+password.salt=sPaf^q*j23ou,89|ZXcj@r$@cv#@-dj+k0j;D.!./dSF.,
