--- a/pom.xml
+++ b/pom.xml
@@ -260,6 +260,7 @@
                 </configuration>
             </plugin>
 
+            <!-- 编译时加载lib -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
