--- a/src/main/resources/emall.properties
+++ b/src/main/resources/emall.properties
@@ -4,3 +4,6 @@ ftp.pass=ftppassword
 ftp.server.http.prefix=ftp://127.0.0.1/img/
 
 password.salt=sPaf^q*j23ou,89|ZXcj@r$@cv#@-dj+k0j;D.!./dSF.,
+
+# TODO
+alipay.callback.url=
