--- a/pom.xml
+++ b/pom.xml
@@ -143,11 +143,11 @@
             <!--<scope>test</scope>-->
         </dependency>
 
-        <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
-            <version>2.3</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>joda-time</groupId>-->
+<!--            <artifactId>joda-time</artifactId>-->
+<!--            <version>2.3</version>-->
+<!--        </dependency>-->
 
 
         <!-- id加密解密 -->
