--- a/src/main/resources/emall.properties
+++ b/src/main/resources/emall.properties
@@ -1,9 +1,9 @@
-ftp.server.ip=127.0.0.1
+ftp.server.ip=111.231.171.22
 ftp.user=mmallftp
 ftp.pass=ftppassword
-ftp.server.http.prefix=ftp://127.0.0.1/img/
+ftp.server.http.prefix=ftp://111.231.171.22/img/
 
 password.salt=sPaf^q*j23ou,89|ZXcj@r$@cv#@-dj+k0j;D.!./dSF.,
 
-# TODO
-alipay.callback.url=
+alipay.callback.url=http://111.231.171.22/alipay_callback.do
+
