--- a/src/main/resources/emall.properties
+++ b/src/main/resources/emall.properties
@@ -1,6 +1,6 @@
 ftp.server.ip=111.231.171.22
-ftp.user=mmallftp
-ftp.pass=ftppassword
+ftp.user=ftpuser
+ftp.pass=971127
 ftp.server.http.prefix=ftp://111.231.171.22/img/
 
 password.salt=sPaf^q*j23ou,89|ZXcj@r$@cv#@-dj+k0j;D.!./dSF.,
