--- a/src/main/resources.dev/emall.properties
+++ b/src/main/resources.dev/emall.properties
@@ -11,9 +11,11 @@ alipay.callback.url=http://111.231.171.22/alipay_callback.do
 # redis config start
 
 # redis服务IP
-redis.ip = 127.0.0.1
+redis1.ip = 127.0.0.1
+redis2.ip = 127.0.0.1
 # redis服务端口
-redis.port = 6379
+redis1.port = 6379
+redis2.port = 6380
 # 最大连接数
 redis.max.total = 20
 # 最大空闲数
