--- a/pom.xml
+++ b/pom.xml
@@ -250,6 +250,18 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.11.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-avro</artifactId>
+            <version>2.9.9</version>
+        </dependency>
+
     </dependencies>
 
 
